# genometk

./: Cargo.toml  README.md
src/: generate.rs  main.rs  subsample.rs  tabulate.rs
test_files/: test.fasta  test_list.txt  test_subsample.fasta  test_subsample_list.fasta
