[package]
name = "genometk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [test]
# name = "integration_test"
# path = "tests/integration_test.rs"

[dependencies]
bio = "1.3.1"
camino = "1.1.6"
clap = { version = "4.3.19", features = ["derive"] }
fastrand = "2.0.0"
rayon = "1.7.0"

